Initial launch for now

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -52,7 +52,7 @@
 					About Me
 				</h3>
 				<p>
-					I recently received my Bachelor of Science for Computer Engineering at San Francisco State University and am currently looking for entry-role or internship opportunities for a Software Developer role. I am an enthusiast and a dreamer that loves to see stuff come into reality thus I want to become a developer. At this time, I am working some side projects including developing a personal blog and a game, which is shown in the <a href="portfolio.html">portfolio section</a> of this website along with my recent work. Outside of work, I enjoy going to the gym, spending time with friends/family on watch shows/anime, and playing video games. 
+					I recently received my Bachelor of Science for Computer Engineering at San Francisco State University and am currently looking for entry-role opportunities for a Software Developer role. I am an enthusiast and a dreamer that loves to see stuff come into reality thus I want to become a developer. At this time, I am working some side projects including developing a personal blog and a game, which is shown in the <a href="portfolio.html">portfolio section</a> of this website along with my recent work. Outside of work, I enjoy going to the gym, spending time with friends/family on watch shows/anime, and playing video games. 
 				</p>
 			</div>
 		</div>
