--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -43,65 +43,62 @@
 				<div id="carouselFade1" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/A.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/SmartBottle/SmartBottle1.JPG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Smart Bottle App</h4>
 				      		<h6 class="mb-5">A device to keep you hydrated everyday!</h6>
-							<a href="https://github.com/fillupss/SmartBottleApp"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
-				      </div>
-				    </div>
-				    <div class="carousel-item">
-				      <img src="imgs/B.JPG" class="d-block w-100 h-25 pics" alt="...">
-				      <div class="middle">
-				      		<h4>Smart Bottle App</h4>
-				      		<h6 class="mb-5">A device to keep you hydrated</h6>
-							<a href="https://github.com/fillupss/SmartBottleApp"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
-				      </div>
-				    </div>
-				    <div class="carousel-item">
-				      <img src="imgs/C.JPG" class="d-block w-100 h-25 pics" alt="...">
-				      <div class="middle">
-				      		<h4>Smart Bottle App</h4>
-				      		<h6 class="mb-5">A device to keep you hydrated</h6>
-							<a href="https://github.com/fillupss/SmartBottleApp"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
+							<a href="https://sites.google.com/view/smartbottle/home"><button class="button2">Visit Website<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
 				  </div>
-				  <a class="carousel-control-prev" href="#carouselFade1" role="button" data-slide="prev">
-				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				    <span class="sr-only">Previous</span>
-				  </a>
-				  <a class="carousel-control-next" href="#carouselFade1" role="button" data-slide="next">
-				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				    <span class="sr-only">Next</span>
-				  </a>
 				</div>
 			</div>
 			<div class="col-lg-6 imageHover mt-5">
 				<div id="carouselFade2" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/A.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/SFVR/SFVR1.png" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
-				      		<h6 class="mb-5">Street Fighting but in Virtual Reality!</h6>
-							<a href="https://github.com/FishWash/street-fighter-vr"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
+				      		<h6>Street Fighting but in Virtual Reality!</h6>
+				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/B.JPG" class="d-block w-100 h-25 pics" alt="...">
-				      <div class="middle">
+				      <img src="imgs/SFVR/SFVR2.png" class="d-block w-100 h-25 pics" alt="...">
+				      <div class="middle mr-auto">
 				      		<h4>Street Fighter VR</h4>
-				      		<h6 class="mb-5">Street Fighting but in Virtual Reality!</h6>
-							<a href="https://github.com/FishWash/street-fighter-vr"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
+				      		<h6>Street Fighting but in Virtual Reality!</h6>
+				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/C.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/SFVR/SFVR3.png" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
-				      		<h6 class="mb-5">Street Fighting but in Virtual Reality!</h6>
-							<a href="https://github.com/FishWash/street-fighter-vr"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
+				      		<h6>Street Fighting but in Virtual Reality!</h6>
+				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
+				      </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img src="imgs/SFVR/SFVR4.png" class="d-block w-100 h-25 pics" alt="...">
+				      <div class="middle">
+				      		<h4>Street Fighter VR</h4>
+				      		<h6>Street Fighting but in Virtual Reality!</h6>
+				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
+				      </div>
+				    </div>
+				    <div class="carousel-item">
+				      <img src="imgs/SFVR/SFVR5.png" class="d-block w-100 h-25 pics" alt="...">
+				      <div class="middle">
+				      		<h4>Street Fighter VR</h4>
+				      		<h6>Street Fighting but in Virtual Reality!</h6>
+				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
 				  </div>
@@ -124,7 +121,7 @@
 				<div id="carouselFade3" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/A.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars1.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
@@ -132,7 +129,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/B.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars2.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
@@ -140,7 +137,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/C.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars3.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
@@ -162,7 +159,7 @@
 				<div id="carouselFade4" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/A.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/AnimalAdventure/AnimalAdventure1.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Animal Adventure</h4>
 				      		<h6 class="mb-5">A 2-D platform survival game</h6>
@@ -170,7 +167,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/B.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/AnimalAdventure/AnimalAdventure2.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Animal Adventure</h4>
 				      		<h6 class="mb-5">A 2-D platform survival game</h6>
@@ -178,7 +175,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/C.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/AnimalAdventure/AnimalAdventure3.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Animal Adventure</h4>
 				      		<h6 class="mb-5">A 2-D platform survival game</h6>
@@ -205,23 +202,7 @@
 				<div id="carouselFade5" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/A.JPG" class="d-block w-100 h-25 pics" alt="...">
-				      <div class="middle">
-				      		<h4>Travel Blog</h4>
-				      		<h6 class="mb-5">Personal memoir of my travels</h6>
-							<a><button class="button1" style="cursor: not-allowed;">In Progress</button></a>			      	
-				      </div>
-				    </div>
-				    <div class="carousel-item">
-				      <img src="imgs/B.JPG" class="d-block w-100 h-25 pics" alt="...">
-				      <div class="middle">
-				      		<h4>Travel Blog</h4>
-				      		<h6 class="mb-5">Personal memoir of my travels</h6>
-							<a><button class="button1" style="cursor: not-allowed;">In Progress</button></a>				      	
-				      </div>
-				    </div>
-				    <div class="carousel-item">
-				      <img src="imgs/C.JPG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/Blog/Blog1.PNG" class="d-block w-100 h-25 pics" alt="...">
 				      <div class="middle">
 				      		<h4>Travel Blog</h4>
 				      		<h6 class="mb-5">Personal memoir of my travels</h6>
@@ -229,14 +210,6 @@
 				      </div>
 				    </div>
 				  </div>
-				  <a class="carousel-control-prev" href="#carouselFade5" role="button" data-slide="prev">
-				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				    <span class="sr-only">Previous</span>
-				  </a>
-				  <a class="carousel-control-next" href="#carouselFade5" role="button" data-slide="next">
-				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				    <span class="sr-only">Next</span>
-				  </a>
 				</div>
 			</div>
 		</div>
