--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -27,6 +27,9 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="#">Resume</a>
 	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Contact Me</a>
+	      </li>
 	    </ul>
 	  </div>
 	</nav>
