changed skill sets

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -63,9 +63,44 @@
 		</div>
 	</section>
 
-	<section class="container">
-		<div class="row justify-content-md-center" style="border: 2px solid black">
-			<div class="col-md-10 info mt-5">
+	<section class="container skills">
+		<div class="row pt-3 pb-3">
+			<div class="col-md-4 divider">
+				<i class="fas fa-gamepad fa-5x"></i>
+				<p><strong>Game Development</strong></p>
+				<p class="info">Love to create 2D or 3D games to bring imaginations to life using design patterns and clean code structure</p>
+			</div>
+			<div class="col-md-4 divider">
+				<div>
+					<i class="fas fa-globe-americas fa-5x"></i>
+					<p><strong>Web Development</strong></p>
+					<p class="info">Like to create responsive websites so that thoughts and experience can be shared among others to connect</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<i class="fab fa-android fa-5x"></i>
+				<p><strong>Android Development</strong></p>
+				<p class="info">Enjoy developing Android apps so that users can access data anywhere from their Android devices</p>
+			</div>
+		</div>
+	</section>
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-6 mt-5 text-right" style="border-right: solid black 1px;">
+				<h2>
+					Looking for a Developer?
+				</h2>
+				<button type="button" class="btn btn-outline-primary">Contact Me <i class="fas fa-arrow-circle-right"></i></button>
+			</div>
+			<div class="col-md-6 mt-5" style="border-left: solid black 1px;">
+				<div class="icon">Skype:<a href="https://join.skype.com/invite/ypSpNVS12WTF"><i class="fab fa-skype fa-2x" style="color: #00AFF0;"></i></a></div>
+				<div class="icon">LinkedIn:<a href="https://www.linkedin.com/in/philip-chen-119489151/"><i class="fab fa-linkedin fa-2x" style="color:#0e76a8;"></i></a></div>
+				<div class="icon">Email:<a href="mailto:pchen5@mail.sfsu.edu?Subject=Hello!" target="_top"><i class="fas fa-envelope fa-2x" style="color: #f53d05;"></i></a></div>
+			</div>
+		</div>
+	</section>
+
+	<!-- <div class="col-md-10 info mt-5">
 				<ul>
 					<i class="fas fa-gamepad fa-5x"></i>
 					<li>Game Development</li>
@@ -89,22 +124,7 @@
 						</li>
 					</ul>
 				</ul>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6 mt-5 text-right" style="border-right: solid black 1px;">
-				<h2>
-					Looking for a Developer?
-				</h2>
-				<button type="button" class="btn btn-outline-primary">Contact Me <i class="fas fa-arrow-circle-right"></i></button>
-			</div>
-			<div class="col-md-6 mt-5" style="border-left: solid black 1px;">
-				<div class="icon">Skype:<a href="https://join.skype.com/invite/ypSpNVS12WTF"><i class="fab fa-skype fa-2x" style="color: #00AFF0;"></i></a></div>
-				<div class="icon">LinkedIn:<a href="https://www.linkedin.com/in/philip-chen-119489151/"><i class="fab fa-linkedin fa-2x" style="color:#0e76a8;"></i></a></div>
-				<div class="icon">Email:<a href="mailto:pchen5@mail.sfsu.edu?Subject=Hello!" target="_top"><i class="fas fa-envelope fa-2x" style="color: #f53d05;"></i></a></div>
-			</div>
-		</div>
-	</section>
+			</div> -->
 		
 
 	<!-- JS, Popper.js, and jQuery -->
