made a table for the skill set

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -66,21 +66,89 @@
 	<section class="container skills">
 		<div class="row pt-3 pb-3">
 			<div class="col-md-4 divider">
-				<i class="fas fa-gamepad fa-5x"></i>
-				<p><strong>Game Development</strong></p>
-				<p class="info">Love to create 2D or 3D games to bring imaginations to life using design patterns and clean code structure</p>
+				<div>
+					<i class="fas fa-gamepad fa-5x mb-2"></i>
+					<p><strong>Game Development</strong></p>
+					<p class="info"><em>Love to create 2D or 3D games to bring imaginations to life using design patterns and clean code structure</em></p>
+				</div>
+				<div>
+					<ul>
+						<li>
+							Languages I can use:
+							<ul>
+								<li>Java</li>
+								<li>C#</li>
+							</ul>
+						</li>
+						<li>
+							Design Tools:
+							<ul>
+								<li>Java SDK SwingX</li>
+								<li>Unity</li>
+								<li>IntelliJ</li>
+								<li>Eclipse</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="col-md-4 divider">
 				<div>
-					<i class="fas fa-globe-americas fa-5x"></i>
+					<i class="fas fa-globe-americas fa-5x mb-2"></i>
 					<p><strong>Web Development</strong></p>
-					<p class="info">Like to create responsive websites so that thoughts and experience can be shared among others to connect</p>
+					<p class="info"><em>Like to create responsive websites so that thoughts and experience can be shared among others to connect</em></p>
+				</div>
+				<div>
+					<ul>
+						<li>
+							Languages I can use:
+							<ul>
+								<li>HTML</li>
+								<li>CSS</li>
+								<li>JavaScript</li>
+								<li>Node.js</li>
+							</ul>
+						</li>
+						<li>
+							Design Tools:
+							<ul>
+								<li>Bootstrap 3/4</li>
+								<li>MongoDB</li>
+								<li>Sublime</li>
+								<li>MapBox API</li>
+								<li>Cloudinary API</li>
+							</ul>
+						</li>
+					</ul>
 				</div>
 			</div>
-			<div class="col-md-4">
-				<i class="fab fa-android fa-5x"></i>
-				<p><strong>Android Development</strong></p>
-				<p class="info">Enjoy developing Android apps so that users can access data anywhere from their Android devices</p>
+			<div class="col-md-4 divider">
+				<div>
+					<i class="fab fa-android fa-5x mb-2"></i>
+					<p><strong>Android Development</strong></p>
+					<p class="info"><em>Enjoy developing Android apps so that users can access data anywhere from their Android devices</em></p>
+				</div>
+				<div>
+					<ul>
+						<li>
+							Experience In:
+							<ul>
+								<li>Java</li>
+								<li>Android Studio</li>
+							</ul>
+						</li>
+						<li>
+							Design Tools:
+							<ul>
+								<li>Bluetooth</li>
+								<li>Services</li>
+								<li>UI Widgets</li>
+								<li>Media</li>
+								<li>Custom Layouts</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</section>
