--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -13,7 +13,7 @@
 	<script src="https://kit.fontawesome.com/c2d5f935e6.js" crossorigin="anonymous"></script>
 	<title>Portfolio</title>
 </head>
-<body>
+<body style="background-color: #80dfff;">
 	<nav id="mainNavbar" class="navbar navbar-expand-lg navbar-light fixed-top">
 	  <a class="navbar-brand" href="index.html"><img src="imgs/Home/Portfolio Icon.png"></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
