progress on index

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -71,7 +71,7 @@
 					<p><strong>Game Development</strong></p>
 					<p class="info"><em>Love to create 2D or 3D games to bring imaginations to life using design patterns and clean code structure</em></p>
 				</div>
-				<div>
+				<div class="list">
 					<ul>
 						<li>
 							Languages I can use:
@@ -91,6 +91,7 @@
 						</li>
 					</ul>
 				</div>
+				<hr class="d-md-none">
 			</div>
 			<div class="col-md-4 divider">
 				<div>
@@ -98,7 +99,7 @@
 					<p><strong>Web Development</strong></p>
 					<p class="info"><em>Like to create responsive websites so that thoughts and experience can be shared among others to connect</em></p>
 				</div>
-				<div>
+				<div class="list">
 					<ul>
 						<li>
 							Languages I can use:
@@ -121,14 +122,15 @@
 						</li>
 					</ul>
 				</div>
+				<hr class="d-md-none">
 			</div>
-			<div class="col-md-4 divider">
+			<div class="col-md-4">
 				<div>
 					<i class="fab fa-android fa-5x mb-2"></i>
 					<p><strong>Android Development</strong></p>
 					<p class="info"><em>Enjoy developing Android apps so that users can access data anywhere from their Android devices</em></p>
 				</div>
-				<div>
+				<div class="list" style="text-align: left;">
 					<ul>
 						<li>
 							Experience In:
@@ -152,9 +154,9 @@
 			</div>
 		</div>
 	</section>
-	<section class="container-fluid">
+	<section class="container-fluid mt-5">
 		<div class="row">
-			<div class="col-md-6 mt-5 text-right" style="border-right: solid black 1px;">
+			<div class="col-md-6 text-right" style="border-right: solid black 1px;">
 				<h2>
 					Looking for a Developer?
 				</h2>
@@ -167,34 +169,7 @@
 			</div>
 		</div>
 	</section>
-
-	<!-- <div class="col-md-10 info mt-5">
-				<ul>
-					<i class="fas fa-gamepad fa-5x"></i>
-					<li>Game Development</li>
-					<ul>
-						<li>
-							Can use Swing library from the Java SDK to develop 2D games and C# to develop 3D games with the Unity Engine.
-						</li>
-					</ul>
-					<i class="fas fa-globe-americas fa-5x"></i>
-					<li>Web Development</li>
-					<ul>
-						<li>
-							Self-taught HTML/CSS + JavaScript for the front-end portion and Node.js + Express.js + MongoDB as the backend for a responsive website.
-						</li>
-					</ul>
-					<i class="fab fa-android fa-5x"></i>
-					<li>Android Development</li>
-					<ul>
-						<li>
-							Can work with Java and Android Studio to develop Android Apps.
-						</li>
-					</ul>
-				</ul>
-			</div> -->
 		
-
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
