--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -28,7 +28,7 @@
 	        <a class="nav-link" href="#">Resume</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">Contact Me</a>
+	        <a class="nav-link" onclick="scrollToContact()" style="cursor: alias;">Contact Me</a>
 	      </li>
 	    </ul>
 	  </div>
@@ -209,7 +209,7 @@
 				      <div class="middle">
 				      		<h4>Travel Blog</h4>
 				      		<h6 class="mb-5">Personal memoir of my travels</h6>
-							<a><button class="button1" style="cursor: not-allowed;">In Progress</button></a>			      	
+							<a href="https://mysterious-springs-05225.herokuapp.com/posts"><button class="button2">Visit Website<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
 				  </div>
@@ -224,5 +224,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="JavaScript/index.js"></script>
 </body>
 </html>
