--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Roboto Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet"> 
-	<!-- Oxygen Font -->
-	<link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Gudea&display=swap" rel="stylesheet">
 	<!-- Custom CSS stylesheet -->
 	<link rel="stylesheet" type="text/css" href="app.css">
 	<!-- Font Awesome CDN -->
@@ -34,7 +33,7 @@
 	  </div>
 	</nav>
 
-	<section class="container-fluid mb-5 pt-3 pb-5">
+	<section class="container-fluid mb-5 pt-5 pb-5">
 		<div class="heading">
 			<h1>
 				Hi I'm Philip! Nice to meet you!
@@ -57,7 +56,7 @@
 					</h3>
 				</div>
 				<p class="info">
-					I recently received my Bachelor of Science for Computer Engineering at San Francisco State University and am currently looking for entry-role opportunities for a Software Developer role. I am an enthusiast and a dreamer that loves to see stuff come into reality thus I want to become a developer. At this time, I am working some side projects including developing a personal blog and a game, which is shown in the <a href="portfolio.html">portfolio section</a> of this website along with my recent work. Outside of work, I enjoy going to the gym, spending time with friends/family on watch shows/anime, and playing video games. 
+					I recently received my Bachelor of Science for Computer Engineering at San Francisco State University and am currently looking for entry-role opportunities for a Software Developer role. I am an enthusiast and a dreamer that loves to see stuff come into reality thus I want to become a developer. At this time, I am working on some side projects which is shown in the <a href="portfolio.html">portfolio section</a> of this website along with my recent work. I genuinely care about people thus I will put in my full effort to ensure the satisfication from others and get the job done.
 				</p>
 			</div>
 		</div>
@@ -67,7 +66,7 @@
 		<div class="row pt-3 pb-3">
 			<div class="col-md-4 divider">
 				<div>
-					<i class="fas fa-gamepad fa-5x mb-2"></i>
+					<i class="fas fa-gamepad fa-5x mb-2" style="color:#9ba39d;"></i>
 					<p><strong>Game Development</strong></p>
 					<p class="info"><em>Love to create 2D or 3D games to bring imaginations to life using design patterns and clean code structure</em></p>
 				</div>
@@ -95,7 +94,7 @@
 			</div>
 			<div class="col-md-4 divider">
 				<div>
-					<i class="fas fa-globe-americas fa-5x mb-2"></i>
+					<i class="fas fa-globe-americas fa-5x mb-2" style="color: #3987c9;"></i>
 					<p><strong>Web Development</strong></p>
 					<p class="info"><em>Like to create responsive websites so that thoughts and experience can be shared among others to connect</em></p>
 				</div>
@@ -126,7 +125,7 @@
 			</div>
 			<div class="col-md-4">
 				<div>
-					<i class="fab fa-android fa-5x mb-2"></i>
+					<i class="fab fa-android fa-5x mb-2" style="color: #a4c639;"></i>
 					<p><strong>Android Development</strong></p>
 					<p class="info"><em>Enjoy developing Android apps so that users can access data anywhere from their Android devices</em></p>
 				</div>
@@ -164,13 +163,13 @@
 			<div class="col-lg-3">
 				<div class="row justify-content-md-center">
 					<div class="col-lg-4 mb-3 mb-lg-0">
-						<div class="icon">Skype:<a href="https://join.skype.com/invite/ypSpNVS12WTF"><i class="fab fa-skype fa-2x" style="color: #00AFF0;"></i></a></div>
+						<div class="icon">Skype:<a href="https://join.skype.com/invite/ypSpNVS12WTF"><i class="fab fa-skype fa-2x"></i></a></div>
 					</div>
 					<div class="col-lg-4 mb-3 mb-lg-0">
-						<div class="icon">LinkedIn:<a href="https://www.linkedin.com/in/philipchen97/"><i class="fab fa-linkedin fa-2x" style="color:#0e76a8;"></i></a></div>
+						<div class="icon">LinkedIn:<a href="https://www.linkedin.com/in/philipchen97/"><i class="fab fa-linkedin fa-2x"></i></a></div>
 					</div>
 					<div class="col-lg-4 mb-3 mb-lg-0">
-						<div class="icon">Email:<a href="mailto:pchen5@mail.sfsu.edu?Subject=Hello!" target="_top"><i class="fas fa-envelope fa-2x" style="color: #f53d05;"></i></a></div>
+						<div class="icon">Email:<a href="mailto:pchen5@mail.sfsu.edu?Subject=Hello!" target="_top"><i class="fas fa-envelope fa-2x"></i></a></div>
 					</div>
 				</div>
 			</div>
