--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Roboto Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet"> 
-	<!-- Oxygen Font -->
-	<link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Gudea&display=swap" rel="stylesheet">
 	<!-- Custom CSS stylesheet -->
 	<link rel="stylesheet" type="text/css" href="app.css">
 	<!-- Font Awesome CDN -->
@@ -34,7 +33,7 @@
 	  </div>
 	</nav>
 
-	<div class="heading">
+	<div class="heading pt-5">
 		<h1>
 			Recent Projects
 		</h1>
@@ -42,7 +41,7 @@
 
 	<section class="container">
 		<div class="row">
-			<div class="col-lg-6 imageHover mt-5">
+			<div class="col-lg-6 imageHover mt-2">
 				<div id="carouselFade1" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
@@ -56,7 +55,7 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-6 imageHover mt-5">
+			<div class="col-lg-6 imageHover mt-2">
 				<div id="carouselFade2" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
@@ -64,7 +63,7 @@
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
 				      		<h6>Street Fighting but in Virtual Reality!</h6>
-				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+				      		<h6 class="mb-5"><strong>Recorded from Unity NOT from Oculus</strong></h6>
 							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
@@ -73,7 +72,7 @@
 				      <div class="middle mr-auto">
 				      		<h4>Street Fighter VR</h4>
 				      		<h6>Street Fighting but in Virtual Reality!</h6>
-				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+				      		<h6 class="mb-5"><strong>Recorded from Unity NOT from Oculus</strong></h6>
 							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
@@ -82,7 +81,7 @@
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
 				      		<h6>Street Fighting but in Virtual Reality!</h6>
-				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+				      		<h6 class="mb-5"><strong>Recorded from Unity NOT from Oculus</strong></h6>
 							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
@@ -91,7 +90,7 @@
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
 				      		<h6>Street Fighting but in Virtual Reality!</h6>
-				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+				      		<h6 class="mb-5"><strong>Recorded from Unity NOT from Oculus</strong></h6>
 							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
@@ -100,7 +99,7 @@
 				      <div class="middle">
 				      		<h4>Street Fighter VR</h4>
 				      		<h6>Street Fighting but in Virtual Reality!</h6>
-				      		<h6 class="mb-5">Looks better in Oculus than in video!</h6>
+				      		<h6 class="mb-5"><strong>Recorded from Unity NOT from Oculus</strong></h6>
 							<a href="https://www.youtube.com/watch?v=DQCjgH2g_-0&feature=youtu.be"><button class="button2">Watch Video<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
@@ -124,27 +123,27 @@
 				<div id="carouselFade3" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/TankWars/TankWars1.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars1.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
-				      		<h4>Tank Wars</h4>
+				      		<h4 class="mr-5">Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
-							<a href="https://github.com/fillupss/TankWars"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
+							<a href="https://github.com/fillupss/TankWars" class="mr-5"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>			      	
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/TankWars/TankWars2.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars2.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
-				      		<h4>Tank Wars</h4>
+				      		<h4 class="mr-5">Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
-							<a href="https://github.com/fillupss/TankWars"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
+							<a href="https://github.com/fillupss/TankWars" class="mr-5"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>				      	
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/TankWars/TankWars3.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/TankWars/TankWars3.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
-				      		<h4>Tank Wars</h4>
+				      		<h4 class="mr-5">Tank Wars</h4>
 				      		<h6 class="mb-5">A 2-D co-op game defeating waves of enemies</h6>
-							<a href="https://github.com/fillupss/TankWars"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>		      	
+							<a href="https://github.com/fillupss/TankWars" class="mr-5"><button class="button2">Visit GitHub<span class="doubleArrow"><i class="fas fa-angle-double-up"></i></span></button></a>		      	
 				      </div>
 				    </div>
 				  </div>
@@ -170,7 +169,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/AnimalAdventure/AnimalAdventure2.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/AnimalAdventure/AnimalAdventure2.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
 				      		<h4>Animal Adventure</h4>
 				      		<h6 class="mb-5">A 2-D platform survival game</h6>
@@ -178,7 +177,7 @@
 				      </div>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="imgs/AnimalAdventure/AnimalAdventure3.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/AnimalAdventure/AnimalAdventure3.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
 				      		<h4>Animal Adventure</h4>
 				      		<h6 class="mb-5">A 2-D platform survival game</h6>
@@ -199,13 +198,13 @@
 		</div>
 	</section>
 
-	<section class="container">
+	<section class="container pb-5">
 		<div class="row justify-content-md-center">
 			<div class="col-lg-6 imageHover mt-5">
 				<div id="carouselFade5" class="carousel slide carousel-fade" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="imgs/Blog/Blog1.PNG" class="d-block w-100 h-25 pics" alt="...">
+				      <img src="imgs/Blog/Blog1.PNG" class="d-block w-100 h-25 pics">
 				      <div class="middle">
 				      		<h4>Travel Blog</h4>
 				      		<h6 class="mb-5">Personal memoir of my travels</h6>
@@ -217,8 +216,6 @@
 			</div>
 		</div>
 	</section>
-
-	<!-- <button class="finish">Green<span class="doubleArrow" style="margin-left: 15%;"><i class="fas fa-angle-double-up"></i></span></button> -->
 
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
